Cherry-pick r231591. rdar://problem/39290394

[Cocoa] Some fields are not identified as [WKWebProcessPlugInNodeHandle isTextField]
    https://bugs.webkit.org/show_bug.cgi?id=185260
    <rdar://problem/39290394>

    Source/WebKit:

    INPUT element are not considered to be text fields when
    calling -[WKWebProcessPlugInNodeHandle isTextField]
    when they are of type number.

    Patch by Richard Houle <rhoule@apple.com> on 2018-05-09
    Reviewed by Tim Horton.

    * WebProcess/InjectedBundle/DOM/InjectedBundleNodeHandle.cpp:
    (WebKit::InjectedBundleNodeHandle::isTextField const):

    Tools:

    Patch by Richard Houle <rhoule@apple.com> on 2018-05-09
    Reviewed by Tim Horton.

    * TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
    * TestWebKitAPI/Tests/WebKitCocoa/InjectedBundleNodeHandleIsTextField.mm: Added.
    (-[InjectedBundleNodeHandleIsTextField isTextFieldForHTMLInputType:document:jsContext:]):
    (-[InjectedBundleNodeHandleIsTextField webProcessPlugIn:didCreateBrowserContextController:]):
    * TestWebKitAPI/Tests/WebKitCocoa/UIDelegate.mm:
    (-[InjectedBundleNodeHandleIsTextFieldDelegate webView:runJavaScriptAlertPanelWithMessage:initiatedByFrame:completionHandler:]):

    Canonical link: https://commits.webkit.org/200965@trunk
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@231591 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/200942.40@safari-606.1.17-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-606.1.17-branch@231944 268f45cc-cd09-0410-ab3c-d52691b4dbfc